styled view for editing an existing project, fixed some spacing in the new project form

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -2342,6 +2342,138 @@ header {
 	}
 }
 
+.project-edit {
+
+	h1 {
+		line-height: 50px;
+	}
+
+	h3 {
+		border-bottom: 1px solid @three;
+		margin-bottom: 20px;
+	}
+
+
+	a {
+		font-style: normal;
+	}
+
+	a:hover {
+		font-style: oblique;
+	}
+
+	button {
+		width: auto;
+		height: 40px;
+		background-color: @three;
+		text-align: center;
+		font-size: 13px;
+		padding: 0 20px;
+		color: @c;
+	}
+
+	button:hover {
+		background-color: @yellow;
+		color: @three;
+	}
+
+
+	.field {
+		height: 25px;
+		width: 400px;
+		margin-bottom: 10px;
+		padding: 5px;
+	}
+
+	.project-form-wrap {
+		border: 6px solid #e7e7e7;
+		width: 70%;
+		height: 100%;
+		float: left;
+		padding: 100px 40px 40px 40px;
+		clear: both;
+
+		#main {
+			margin-bottom: 30px;
+			float: left;
+			clear: both;
+			width: 90%;
+		}
+
+		#text {
+				margin-bottom: 30px;
+				height: auto;
+				float: left;
+				clear: both;
+				width: 90%;
+
+				.text-blocks {
+					height: 490px;
+
+					.project-text-block {
+						height: 490px;
+
+						.title {
+							margin: 0 0 20px 0;
+							border: 1px solid @nine;
+						}
+
+						.text-box {
+							width: 99%;
+							height: 400px;
+							float: left;
+							clear: both;
+							padding: 5px;
+						}
+					}
+				}
+
+			.btns {
+					float: left;
+					clear: both;
+					margin-top: 20px;
+				}
+			}
+
+		#images {
+				float: left;
+				clear: both;
+				width: 90%;
+				height: auto;
+				background-color: #e7e7e7;
+				padding: 30px;
+				margin-bottom: 30px;
+
+				.project-image-block {
+					height: auto;
+					float: left;
+					clear: both;
+
+					select {
+						margin-bottom: 20px;
+					}
+
+					img {
+						max-width: 100%;
+						height: auto;
+					}
+
+					.browse {
+						float: left;
+						clear: both;
+						margin-bottom: 20px;
+					}
+				}
+				.btns {
+					float: left;
+					clear: both;
+					margin-top: 20px;
+				}
+			}
+	}
+
+
+}
 
 
 
